@@ -8,12 +8,14 @@
 	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-spec.h:
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-spec.h:
 	Splice out motherboard specific extensions into new files.
 
 	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-s5500wb-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-s5500wb-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.h:
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-s5500wb-spec.h:
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-s5500wb-spec.h:
 	New file.
 
